[package]
name = "npk"
version = "0.1.0"
authors = ["David Karrick <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
num_cpus = "1.13.0"
ron = "0.6"
serde = { version = "1.0.116", features = ["serde_derive"] }
walkdir = "2.3.1"
dirs = "3.0.1"
signal-hook = "0.1.16"
libc = "0.2.77"
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
once_cell = "1.4.1"

[dependencies.git2]
version = "0.13.11"
default-features = false
features = ["ssh", "https"]